  * debian/patches/03_freebsd-fix.patch,
    debian/patches/04_pkgconfig-fix.patch:
  - removed; applied upstream
  * debian/patches/03_fix-documentation-build.patch:
  - added; fix building docs for the GTK+ 2 library
  * debian/control:
  - update build-dependency for libsoup2.4-dev to 2.37.4
  - add libgl1-mesa-dev as a B-D, since we now build with
    WebGL enabled by default

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 17 Jan 2012 20:31:34 -0200

webkit (1.6.3-1) unstable; urgency=low

  * debian/patches/04_pkgconfig-fix.patch:
  - removed; applied in this upstream version
  * debian/rules:
  - move -Wl,--no-relax to LD_FLAGS, when building on alpha, and add
    LDFLAGS as a parameter (part of #648761)
  * debian/patches/01_double-conversion.patch:
  - add CPU(ALPHA) to the list of cpus that pass the test
    (Closes: #648761)
  * debian/patches/04_hurd-fix.patch:
  - patch by Pino Toscano <pino@debian.org> to fix FTBFS on Hurd
    (Closes: #649192)
  * debian/rules:
  - accepted patch by Moritz Muehlenhoff <jmm@debian.org> to use
    dpkg-buildflags for cflags/cppflags/ldflags (Closes: #659391)
  * debian/control:
  - add Conflicts and Replaces combo on libjavascriptcoregtk-1.0-dev also
    for libwebkit-dev << 1.5.0 (Closes: #657408)

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 15 Feb 2012 23:29:11 -0200

webkit (1.6.1-5) unstable; urgency=low

  * debian/rules:
  - also build with stabs debug symbols format when under s390x
    patch by Aurelien Jarno <aurel32@debian.org> (Closes: #637228)
  * debian/control:
  - add Breaks for midori and claws-mail-fancy-plugin versions that
    were using the private webkit_web_view_get_selected_text symbol
    (Closes: #646095)

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 01 Nov 2011 23:20:19 -0200

webkit (1.6.1-4) unstable; urgency=low

  * debian/patches/03_freebsd-fix.patch:
  - fix FreeBSD 64 bits build
  * debian/patches/04_pkgconfig-fix.patch: